
- Changed the class name ezcDbSchemaNonUniqueIndexNameValidator to
  ezcDbSchemaUniqueIndexNameValidator.
- Changed ezcDbSchemaDbReader back to an interface, and created a common SQL
  reader class that implements the common methods.
- Moved ezcDbSchema*Reader/getReaderType() to the new common SQL reader class
  ezcDbSchemaCommonSqlReader.


1.4alpha1 - Monday 05 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #10069: DatabaseSchema only for particular tables.
- Implemented issue #10364: Added support for table name prefixes.
- Implemented issue #11562: Schema validator for duplicate index names.
- Implemented issue #12694: Replace reflection test for class type with SPL
  function.
- Fixed bug #12538: No warning is thrown when an unsupported type is found
  while reading from a database, or writing to a database.


1.3.1 - Monday 14 January 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Documented issue #10161: Column names are always lowercase.
- Fixed issue #11442: Make the intention of the DatabaseSchema component
  clearer in the documentation.


1.3 - Monday 17 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.3beta1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #12022: PersistentObjectDatabaseSchemaTiein not passing it's
  tests.  (Whitespace changes in generated PersistentObject definitions made
  PersistentObjectDatabaseSchemaTiein fail.)


1.3alpha1 - Monday 29 October 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #11047: Make ConvertToDDL() methods accept the database
  name instead of only the database handler.
- Fixed bug #11281: DatabaseSchema's XML reader does not understand '1' for
  the notnull, autoincrement and unsigned fields.