@@ -71,27 +71,8 @@ class ezcDbSchemaPgsqlReader extends ezcDbSchemaCommonSqlReader implements ezcDb
      */
     protected function fetchSchema()
     {
-        $schemaDefinition = array();
-
         $tables = $this->db->query( "SELECT table_name FROM information_schema.tables WHERE table_schema = 'public'" )->fetchAll();
-        array_walk( $tables, create_function( '&$item,$key', '$item = $item[0];' ) );
-
-        // strip out the prefix and only return tables with the prefix set.
-        $prefix = ezcDbSchema::$options->tableNamePrefix;
-
-        foreach ( $tables as $tableName )
-        {
-            $tableNameWithoutPrefix = substr( $tableName, strlen( $prefix ) );
-            if ( $prefix === '' || $tableName !== $tableNameWithoutPrefix )
-            {
-                $fields  = $this->fetchTableFields( $tableName );
-                $indexes = $this->fetchTableIndexes( $tableName );
-
-                $schemaDefinition[$tableNameWithoutPrefix] = ezcDbSchema::createNewTable( $fields, $indexes );
-            }
-        }
-
-        return $schemaDefinition;
+        return $this->processSchema( $tables );
     }
 
     /**
@@ -104,7 +85,7 @@ class ezcDbSchemaPgsqlReader extends ezcDbSchemaCommonSqlReader implements ezcDb
      * @param string $tableName
      * @return array(string=>ezcDbSchemaField)
      */
-    private function fetchTableFields( $tableName )
+    protected function fetchTableFields( $tableName )
     {
         $fields = array();
 
@@ -257,7 +238,7 @@ class ezcDbSchemaPgsqlReader extends ezcDbSchemaCommonSqlReader implements ezcDb
      * @param  string
      * @return array(string=>ezcDbSchemaIndex)
      */
-    private function fetchTableIndexes( $tableName )
+    protected function fetchTableIndexes( $tableName )
     {
         $indexBuffer = array();
         $resultArray = array();
