@@ -7,6 +7,9 @@
   reader class that implements the common methods.
 - Moved ezcDbSchema*Reader/getReaderType() to the new common SQL reader class
   ezcDbSchemaCommonSqlReader.
+- Created a common method ezcDbSchemaCommonSqlReader::processSchema() that
+  iterates over all the tables and gathers information about them and their
+  indexes.
 
 
 1.4alpha1 - Monday 05 May 2008
